Fixed uneven hover highlight on Extras nav link

--- a/css/styles.css
+++ b/css/styles.css
@@ -289,7 +289,7 @@ footer {
 	}
 	
 	.navbar ul li {
-		padding-left: 0px;
+		padding: 5px 0px;
 	}
 	
 	#top_header, #about_header, #projects_header, #extras_header {
@@ -309,9 +309,9 @@ footer {
 		font-size: 1.8em;
 	}
 	
-	#left-of-gh-icon {
+	/*#left-of-gh-icon {
 		padding-right: 10px;
-	}
+	}*/
 }
 
 
@@ -337,10 +337,10 @@ footer {
 	.main_title {
 		font-size: 2.0em;
 	}
-	s
-	#left-of-gh-icon {
+
+	/*#left-of-gh-icon {
 		padding-right: 20px;
-	}
+	}*/
 }
 
 
